# docassemble-ALWeaver

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  architecture.md  mypy.ini  pyproject.toml  setup.py  test_yaml_gen.py  testing.md
.github/: publish.yml
.github/workflows/: alkiln.yml  alkiln_tests.yml  black-action.yml  black_linter.yml  form_tests.yml  publish.yml  run_form_tests.yml  tests.yml  unit_tests.yml
.history/docassemble/assemblylinewizard/: interview_generator_20210211130758.py
docassemble/: AGENTS.md
docassemble/ALWeaver/: __init__.py  advertise_capabilities.py  api_editor.py  api_utils.py  api_weaver.py  api_weaver_worker.py  assembly_line.py  custom_values.py  draggable_table.py  editor_ai_utils.py  editor_utils.py  extract_docx_vars.py  field_grouping.py  generator_constants.py  interview_generator.py  list_taxonomy.py  playground_publish.py  requirements.txt  test_api_utils.py  test_custom_values.py  test_docx_files.py  test_editor_ai_utils.py  test_editor_api.py  test_editor_block_actions.py  test_editor_monaco_loader.py  test_editor_outline_header.py  test_editor_utils_block_types.py  test_editor_utils_order.py  test_editor_utils_persistence.py  test_feeling_lucky.py  test_field_definition_types.py  test_fill_in_field_attributes.py  test_generate_from_path.py  test_llm_robustness.py  test_map_names.py  test_pdf_files.py  test_playground_publish.py  validate_docx_files.py  validate_template_files.py
docassemble/ALWeaver/data/questions/: assembly_line.yml  config.yml  docx_field_tester.yml  feedback.yml  generator-test.yml  pdf_field_tester.yml  review_screen.yml  template_validation.yml  test_next_steps_document.yml  visual.yml  weaver_configuration.yml
docassemble/ALWeaver/data/sources/: configuration_capabilities.yml  list-taxonomy.csv  output_patterns.yml  prompts.yml  question_library_patterns.yml  test_1.feature
docassemble/ALWeaver/data/static/: draggable_table.css  draggable_table.js  editor.css  editor.js  next_steps_appeal.docx  next_steps_existing_case.docx  next_steps_letter.docx  next_steps_other.docx  next_steps_starts_case.docx  styles.css
docassemble/ALWeaver/data/templates/: editor.html  next_steps_appeal.docx  next_steps_existing_case.docx  next_steps_letter.docx  next_steps_other.docx  next_steps_other_form.docx  next_steps_starts_case.docx  output.mako  output_defs.mako  preview_screen.mako  test_docx.docx
docassemble/ALWeaver/test/: docx_file_with_reserved_keywords.docx  pdf_variables_in_docx.docx  reserved_docx_variables.docx  test_docx_no_pdf_field_names.docx  unmap_suffixes.docx
docassemble/assemblylinewizard/: assembly_line.py  custom_values.py  generator_constants.py  generator_test.py  interview_generator.py  map_names_test.py  requirements.txt  test_docx_files.py  test_fill_in_field_attributes.py  test_map_names.py
docassemble/assemblylinewizard/data/questions/: assembly_line.yml  feedback.yml  generator-test.yml  pdf_field_tester.yml  signature_tester.yml  test_mako_in_yaml.yml
docassemble/assemblylinewizard/data/sources/: interview_structure.yml  output_patterns.yml
docassemble/assemblylinewizard/data/static/: next_steps_appeal.docx  next_steps_existing_case.docx  next_steps_letter.docx  next_steps_other.docx  next_steps_starts_case.docx  progressivedisclosure.css  setup_base.py
docassemble/assemblylinewizard/data/templates/: next_steps_other.docx  next_steps_other_form.docx  next_steps_starts_case.docx  quality_check_overlay.docx
docassemble/assemblylinewizard/test/: unmap_suffixes.docx
scripts/: weaver_async_smoketest.py
