[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ALWeaver"
version = "2.1.0"
description = "Quickly turn a PDF or Word form into a draft Docassemble interview."
readme = "README.md"
authors = [
    { name="Quinten Steenhuis", email="qsteenhuis@suffolk.edu" },
]
dependencies = [
    "PyYAML>=5.1.2",
    "beautifulsoup4>=4.11.1",
    "docassemble.ALToolbox>=0.4.2",
    "docassemble.AssemblyLine>=2.11.3",
    "docx2python>=1.27.1",
    "more-itertools>=8.6.0",
    "numpy>=1.0.4",
    "pikepdf>=5.1.1",
    "formfyxer>=0.3.0a1",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
GitHub = "https://github.com/SuffolkLITLab/docassemble-ALWeaver"

[tool.setuptools.packages.find]
where = ["."]

[tool.bandit]
exclude_dirs = ["scripts", "venv", ".venv"]

[tool.black]
extend-exclude = '(__init__.py|setup.py)'

[tool.docsig]
excludes = [
    "docassemble/ALWeaver/api_editor.py",
    "docassemble/ALWeaver/api_utils.py",
    "docassemble/ALWeaver/api_weaver.py",
    "docassemble/ALWeaver/api_weaver_worker.py",
    "docassemble/ALWeaver/custom_values.py",
    "docassemble/ALWeaver/draggable_table.py",
    "docassemble/ALWeaver/editor_ai_utils.py",
    "docassemble/ALWeaver/editor_utils.py",
    "docassemble/ALWeaver/interview_generator.py",
    "docassemble/ALWeaver/list_taxonomy.py",
    "docassemble/ALWeaver/playground_publish.py",
    "docassemble/ALWeaver/validate_template_files.py",
    "scripts/weaver_async_smoketest.py",
]

[tool.mypy]
# global options
exclude = '''(?x)(
    ^setup.py$
  )'''
no_warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

# per-module options:
[[tool.mypy.overrides]]
module = "pikepdf.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docassemble.base.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docassemble.webapp.*"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "docassemble.webapp.worker_common"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "docassemble.AssemblyLine"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "docassemble.AssemblyLine.*"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "docassemble.ALWeaver.validate_template_files"
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "more_itertools"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docxtpl"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docx2python"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "bs4"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "mako.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "flask_cors"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "flask_login"
ignore_missing_imports=true
disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "mypy-pdfminer.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "mypy-ruamel"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "formfyxer"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docassemble.ALDashboard.interview_linter"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "docassemble.ALDashboard.review_screen_generator"
ignore_missing_imports=true

disable_error_code=["import-untyped"]

[[tool.mypy.overrides]]
module = "docassemble.ALWeaver.interview_generator"
disable_error_code=["import-untyped"]

[dependency-groups]
dev = [
    "docassemble.base",
    "docassemble.webapp",
    "more_itertools",
    "pyyaml",
    "docx2python",
    "boto3",
    "pandas-stubs",
    "mypy",
    "dayamlchecker",
    "types-requests",
    "types-PyYAML",
]

